Добавлена вкладка статистика, фильтры перенесены из sidebar'a в каждую вкладку.

--- a/packaging_config.json
+++ b/packaging_config.json
@@ -2,11 +2,17 @@
   "kartony_prefixes": [
     "830902",
     "830905",
+    "830901",
     "ZC",
     "568",
     "676",
     "826",
-    "TKAS"
+    "TKAS",
+    "3807486",
+    "3807486",
+    "Przekladki Ciete",
+    "Ramka IPUV",
+    "TCM"
   ],
   "other_packaging_prefixes": []
 }
