--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,7 @@
-# Зависимости (streamlit, pandas, numpy, openpyxl)
+# Зависимости (streamlit, pandas, numpy, openpyxl, plotly)
 
 streamlit==1.28.0
 pandas==2.1.3
 numpy==1.24.3
 openpyxl==3.1.2
+plotly==5.18.0
