--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,6 @@ pandas==2.1.3
 numpy==1.24.3
 openpyxl==3.1.2
 plotly==5.18.0
+google-api-python-client==2.111.0
+google-auth==2.26.1
+google-auth-oauthlib==1.2.0
