--- a/requirements.txt
+++ b/requirements.txt
@@ -8,3 +8,5 @@ plotly==5.18.0
 google-api-python-client==2.111.0
 google-auth==2.26.1
 google-auth-oauthlib==1.2.0
+selenium==4.16.0
+webdriver-manager==4.0.1
